Labb 2 - More changes AI feedback